--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </ul>
               </section>
               <section class="ingredients grid-flow" data-item-spacing="small">
-                <h3 class="ingredients__title">Ingredients</h3>
+                <h3 class="color-heading">Ingredients</h3>
                 <ul class="bullet-list grid-flow" data-item-spacing="small">
                   <li>
                     <p>2-3 large eggs</p>
@@ -74,7 +74,7 @@
               </section>
               <hr />
               <section class="instructions grid-flow" data-item-spacing="large">
-                <h3>Instructions</h3>
+                <h3 class="color-heading">Instructions</h3>
                 <ul class="number-list grid-flow" data-item-spacing="small">
                   <li>
                     <span class="list-number">1.</span>
@@ -116,7 +116,7 @@
               </section>
               <hr />
               <section class="nutrition grid-flow" data-item-spacing="large">
-                <h3>Nutrition</h3>
+                <h3 class="color-heading">Nutrition</h3>
                 <p>
                   The table below shows nutritional values per serving without the
                   additional fillings.
