--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </section>
               <section class="preparation grid-flow" data-item-spacing="medium">
                 <h2 class="preparation__title">Preparation time</h2>
-                <ul class="bullet-list grid-flow" data-item-spacing="small">
+                <ul class="bullet-list" data-item-spacing="small">
                   <li>
                     <p><span class="bold-text">Total</span>: Approximately 10 minutes</p>
                   </li>
