--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
               </p>
             </section>
-              <section class="preparation" data-item-spacing="medium">
+              <section class="preparation grid-flow" data-item-spacing="small">
                 <h2 class="preparation__title">Preparation time</h2>
                 <ul class="bullet-list" data-item-spacing="small">
                   <li>
